# duckdb-broadcast-briefs

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT_OVERVIEW.md  README.md  config.yaml.example  digest_preview.html  digest_preview.txt  pyproject.toml  requirements.txt
dbb/: __init__.py  cli.py  config.py  db.py  digest.py  summarize.py  transcripts.py  utils.py  youtube.py
docs/: AGENTS.md  CHANNEL_SPECIFIC_EMAILS.md  CHANNEL_SPECIFIC_PROMPTS.md  COMPLETION_SUMMARY.md  EMAIL_IMPLEMENTATION_CHECKLIST.md  FILE_MANIFEST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  SETUP_COMPLETE.md  requirements.md
prompts/: ai_daily_brief_prompt.md  default_prompt.md  how_i_ai_prompt.md
templates/: channel_digest.html  channel_digest.txt
tests/: __init__.py  conftest.py  test_config.py  test_db.py  test_utils.py
